welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:4: error: not found: value Fizz
		case a if (a%3==0) => return Fizz
                                             ^fizzBuzz:5: error: not found: value Buzz
		case a if (a%5==0) => return Buzz
                                             ^fizzBuzz:6: error: not found: value Fizz
		case a if (a%5==0 && a%3==0) => return Fizz Buzz
                                                       ^